--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: completar!</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible: Infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade</li>
     </ul>
 </body>
